BSD 3 clause license and some other nonsense

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lastlog",
   "version": "0.1.0",
   "private": true,
+  "license" : "BSD-3-Clause",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
